# IStudio-cpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  QWEN.md  README.md  cmake-kits.json  package-lock.json
.qwen/: PROJECT_SUMMARY.md
ImpossibleLanguage-ISO-Spec-v1/: 00-Front-Matter.md  01-Scope.md  02-Normative-References.md  03-Terms-and-Definitions.md  04-Conformance.md  05-Lexical-Conventions.md  06-Language-Structure.md  07-Types.md  08-Expressions.md  09-Statements-and-Flow.md  10-Functions-Contracts-and-Templates.md  11-Classes-Objects-and-Modules.md  12-Operator-Precedence-and-Overloading.md  13-Semantics-and-Memory-Model.md  14-Errors-Exceptions-and-Diagnostics.md  15-Portability-Implementation-Defined-and-Undefined-Behavior.md  16-Standard-Library-Core.md  17-Examples-Valid-and-Invalid.md  18-Quick-Reference-Cheatsheet.md  19-Compiler-Implementation-Notes.md  20-Annextures-EBNF-and-Formal-Grammar.md  CHANGELOG.md  README.md  UPDATE_SUMMARY.md
cmake/: IStudioConfig.cmake.in
docs/: README.md  compiler_architecture.md  developer_guide.md  feature_matrix.md  ipl_full_grammar.ebnf  project_status.md  roadmap_semantic_ir_codegen.md  usage.md
examples/: grammar_rules.txt  test_source.c  translation_rules.txt
examples/ipl/: 00_hello_world.ipl  01_variables.ipl  02_control_flow_if.ipl  03_match_shapes.ipl  04_loops.ipl  05_function_contracts.ipl  06_decorators.ipl  07_class_basic.ipl  08_inheritance.ipl  09_interface_impl.ipl  10_trait_impl.ipl  11_generics_template.ipl  12_concept_usage.ipl  13_ownership.ipl  14_matrix_ops.ipl  15_pattern_destructuring.ipl  16_exception_handling.ipl  17_module_import.ipl  18_operator_overload.ipl  19_meta_class.ipl  20_nested_conditionals.ipl  21_function_calls.ipl  22_unary_ops.ipl  23_for_loop.ipl  24_while_loop.ipl  grammar_rules.txt
examples/ipl_invalid/: 00_unterminated_string.ipl  01_unknown_character.ipl  02_missing_paren.ipl  03_missing_semicolon.ipl  04_call_missing_paren.ipl
examples/projects/basic/: ipl_project.ini
include/: AST.h  CMakeLists.txt  Config.h  Lexer.h  Parser.h  Symbol.h  Token.h
include/codegen/: CCodeGenerator.h  CodeGenerator.h  CppCodeGenerator.h  GenericCodeGenerator.h  JavaCodeGenerator.h  PythonCodeGenerator.h  RuleBasedCodeGenerator.h  RuleParser.h
include/ir/: IR.h  Lowering.h
include/istudio/: Diagnostics.h  Lexer.h  Token.h
include/semantic/: SemanticAnalyzer.h  SymbolTable.h  Type.h
ipl_cli/: CMakeLists.txt  Cargo.toml
ipl_cli/src/: commands.rs  compiler.rs  main.rs  package.rs  project.rs
rules/: javascript.rules  rust.rules
scripts/: run_ipl_suite.sh  test_ipl_samples.sh
src/: AST.cpp  CMakeLists.txt  CmakeLists.txt  Config.cpp  Lexer.cpp  Parser.cpp  Symbol.cpp  main.cpp
src/codegen/: CCodeGenerator.cpp  CppCodeGenerator.cpp  GenericCodeGenerator.cpp  JavaCodeGenerator.cpp  PythonCodeGenerator.cpp  RuleParser.cpp
src/ipl_compiler/: ipl_compiler.cpp
src/ir/: IR.cpp  Lowering.cpp
src/istudio/: Diagnostics.cpp  Lexer.cpp
src/semantic/: SemanticAnalyzer.cpp  SymbolTable.cpp  Type.cpp
stdlib/: core_collections.ipl  core_ctype.ipl  core_io.ipl  core_math.ipl  core_memory.ipl  core_meta.ipl  core_string.ipl
tests/parser_invalid/: invalid_call.ipl  missing_semicolon.ipl  unbalanced_brace.ipl
tests/parser_valid/: basic_function.ipl  if_else.ipl  loops.ipl
tests/semantic_invalid/: missing_return.ipl  type_mismatch.ipl
tests/semantic_valid/: basic_function.ipl
